Added Introduction section

--- a/revisiting_january_effect.ipynb
+++ b/revisiting_january_effect.ipynb
@@ -12,9 +12,11 @@
    "metadata": {},
    "source": [
     "## Introduction\n",
-    "...\n",
+    "In this article, we review the January effect which proposes that stock prices' increase from December to January is the highest.\n",
+    "Sources of this calendar effect include tax-loss harvesting by selling losing stocks, and window dressing by buying (selling) winning (losing) stocks.\n",
+    "We could profit from the January effect with a simple mean-reverting trading strategy, that is buy (sell) the losing (winning) stocks at the end of the calendar year. \n",
     "\n",
-    "..."
+    "The project is shared on my online repository https://github.com/DinodC/january-effect."
    ]
   },
   {
