Added The January Effect section

--- a/revisiting_january_effect.ipynb
+++ b/revisiting_january_effect.ipynb
@@ -931,22 +931,42 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## January Effect Trading Strategy\n",
-    "January effect 1\n",
-    "January effect 2\n",
-    "January effect 3\n",
+    "## The January Effect\n",
+    "A calendar effect is an economic or stock market behavior which is related to the calendar such as the day of the week or the month of the year.\n",
+    "The most popular is the January effect which suggests that stock prices' increase from December to January is the highest.\n",
+    "The January effect was first observed by Sydney Wachtel in 1942, but seems to have lost its effect in recent years.\n",
     "\n",
-    "Sources of the January effect:\n",
-    "1. Tax-loss harvesting:\n",
-    "2. Window dressing:\n",
-    "3. Bonus reception: "
+    "## Explanations Of The January Effect:\n",
+    "Possible explanations of the January effect include:\n",
+    "1. Tax-loss harvesting (or saving): \n",
+    "Tax-loss harvesting allows investors to save taxes on realized gains using their unrealized losses.\n",
+    "In detail, investors sell the the losing stocks of their portfolio to generate losses.\n",
+    "Investors' taxes are reduced as the gains and losses are netted out.\n",
+    "2. Window dressing: \n",
+    "Window dressing enables investors to improve the appearance of the portfolios which they manage.\n",
+    "In detail, investors buy (sell) winning (losing) stocks to enhance portfolio appearance.\n",
+    "Investors' portfolios has a better image as they now contain high-flying stocks.\n",
+    "3. Bonus: \n",
+    "Bonus (end-of-year) allows investors to purchase stocks at the beginning of the year.\n",
+    "In detail, investors buying stocks in January will push the stock prices up.\n",
+    "Investors' bonus fuels price increase from December to January.\n",
+    "\n",
+    "## A Trading Strategy To Profit From The January Effect\n",
+    "A possible trading strategy to profit from the January effect is the following:\n",
+    "1. Buy the losing (or off-loaded) stocks of December; and\n",
+    "2. Sell the winning stocks of December.\n",
+    "\n",
+    "We implement the strategy using the different investment universes:\n",
+    "1. S&P 500 Index composed of large capitalization stocks\n",
+    "2. S&P 400 Index comprised of medium capitalization stocks\n",
+    "3. S&P 600 Index composed of small capitalization stocks"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Assume transaction cost (one-way) "
+    "Assume transaction cost (one-way)"
    ]
   },
   {
@@ -962,7 +982,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Initialize the portfolio returns"
+    "Initialize the strategy's returns"
    ]
   },
   {
@@ -978,12 +998,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Calcualte the strategy returns"
+    "Calculate the portfolio returns"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "metadata": {
     "scrolled": true
    },
@@ -1060,15 +1080,35 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.0674128880306187"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "0.5 * ((january_returns.iloc[j][longs]).mean() - (january_returns.iloc[j][shorts]).mean() ) - 2 * tc_one_way"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Portfolio returns"
+    "Display the strategy returns"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1113,7 +1153,7 @@
        "returns  0.048986  0.063328  0.067413"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1128,9 +1168,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Remarks:\n",
+    "1. The trading strategy generated positive returns under all investment universes.\n",
+    "2. The trading strategy produced the highest (lowest) returns using small (large) capitalization stocks.\n",
+    "3. Note that higher spreads are usually attached to small-cap stocks which could reduce the trading strategy's returns. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Conclusion\n",
+    "...\n",
+    "\n",
+    "...\n",
+    "\n",
     "..."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
