Added Conclusion section

--- a/revisiting_january_effect.ipynb
+++ b/revisiting_january_effect.ipynb
@@ -956,7 +956,7 @@
     "1. Buy the losing (or off-loaded) stocks of December; and\n",
     "2. Sell the winning stocks of December.\n",
     "\n",
-    "We implement the strategy using the different investment universes:\n",
+    "We backtest the strategy using the different investment universes:\n",
     "1. S&P 500 Index composed of large capitalization stocks\n",
     "2. S&P 400 Index comprised of medium capitalization stocks\n",
     "3. S&P 600 Index composed of small capitalization stocks"
@@ -998,7 +998,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Calculate the portfolio returns"
+    "Backtesting the strategy"
    ]
   },
   {
@@ -1080,26 +1080,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.0674128880306187"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "0.5 * ((january_returns.iloc[j][longs]).mean() - (january_returns.iloc[j][shorts]).mean() ) - 2 * tc_one_way"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1171,7 +1151,7 @@
     "Remarks:\n",
     "1. The trading strategy generated positive returns under all investment universes.\n",
     "2. The trading strategy produced the highest (lowest) returns using small (large) capitalization stocks.\n",
-    "3. Note that higher spreads are usually attached to small-cap stocks which could reduce the trading strategy's returns. "
+    "3. Note that higher spreads are usually attached to small-cap stocks which could reduce the trading strategy's returns."
    ]
   },
   {
@@ -1179,19 +1159,10 @@
    "metadata": {},
    "source": [
     "## Conclusion\n",
-    "...\n",
-    "\n",
-    "...\n",
-    "\n",
-    "..."
+    "In this article, we reviewed the well-known January effect, it's causes and a trading strategy to profit from it.\n",
+    "The trading strategy buys (sells) the losing (winning) stocks in December, and assumes reversal in January.\n",
+    "The trading strategy generates the most (least) returns when using small (large) capitalization stocks."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
