Added Backtesting Results section

--- a/revisiting_january_effect.ipynb
+++ b/revisiting_january_effect.ipynb
@@ -12,10 +12,8 @@
    "metadata": {},
    "source": [
     "## Introduction\n",
-    "In this article, we review the January effect which proposes that stock prices' increase from December to January is the highest.\n",
-    "Sources of this calendar effect include tax-loss harvesting by selling losing stocks, and window dressing by buying (selling) winning (losing) stocks.\n",
-    "We could profit from the January effect with a simple mean-reverting trading strategy, that is buy (sell) the losing (winning) stocks at the end of the calendar year. \n",
-    "\n",
+    "In this article, we review the infamous January effect which proposes that stocks' prices increase from December to January is the highest.\n",
+    "We illustrate the causes of the January effect, and present a simple trading strategy to profit from this calendar effect.\n",
     "The project is shared on my online repository https://github.com/DinodC/january-effect."
    ]
   },
@@ -23,7 +21,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Import packages"
+    "We start off by importing packages"
    ]
   },
   {
@@ -35,22 +33,6 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import pickle"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Magic"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%matplotlib inline"
    ]
   },
   {
@@ -69,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -352,7 +334,7 @@
        "[5 rows x 505 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -362,8 +344,120 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For WordPress"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>Symbols</th>\n",
+       "      <th>A</th>\n",
+       "      <th>AAL</th>\n",
+       "      <th>AAP</th>\n",
+       "      <th>AAPL</th>\n",
+       "      <th>ABBV</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>date</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2014-06-11</th>\n",
+       "      <td>40.1199</td>\n",
+       "      <td>40.2868</td>\n",
+       "      <td>125.0694</td>\n",
+       "      <td>86.0249</td>\n",
+       "      <td>45.0769</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2014-06-12</th>\n",
+       "      <td>39.7726</td>\n",
+       "      <td>38.2958</td>\n",
+       "      <td>123.2252</td>\n",
+       "      <td>84.5860</td>\n",
+       "      <td>44.6031</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2014-06-13</th>\n",
+       "      <td>39.8407</td>\n",
+       "      <td>38.4672</td>\n",
+       "      <td>123.7407</td>\n",
+       "      <td>83.6603</td>\n",
+       "      <td>45.0187</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2014-06-16</th>\n",
+       "      <td>39.7181</td>\n",
+       "      <td>39.1150</td>\n",
+       "      <td>124.0086</td>\n",
+       "      <td>84.5035</td>\n",
+       "      <td>44.8857</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2014-06-17</th>\n",
+       "      <td>40.0927</td>\n",
+       "      <td>39.8867</td>\n",
+       "      <td>124.9411</td>\n",
+       "      <td>84.3935</td>\n",
+       "      <td>45.1351</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Symbols           A      AAL       AAP     AAPL     ABBV\n",
+       "date                                                    \n",
+       "2014-06-11  40.1199  40.2868  125.0694  86.0249  45.0769\n",
+       "2014-06-12  39.7726  38.2958  123.2252  84.5860  44.6031\n",
+       "2014-06-13  39.8407  38.4672  123.7407  83.6603  45.0187\n",
+       "2014-06-16  39.7181  39.1150  124.0086  84.5035  44.8857\n",
+       "2014-06-17  40.0927  39.8867  124.9411  84.3935  45.1351"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "close['sp500'].head().iloc[:5, :5]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -588,7 +682,7 @@
        "[5 rows x 505 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -598,8 +692,120 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For WordPress"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>Symbols</th>\n",
+       "      <th>A</th>\n",
+       "      <th>AAL</th>\n",
+       "      <th>AAP</th>\n",
+       "      <th>AAPL</th>\n",
+       "      <th>ABBV</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>date</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2019-06-04</th>\n",
+       "      <td>67.95</td>\n",
+       "      <td>29.12</td>\n",
+       "      <td>154.61</td>\n",
+       "      <td>179.64</td>\n",
+       "      <td>76.75</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-06-05</th>\n",
+       "      <td>68.35</td>\n",
+       "      <td>30.36</td>\n",
+       "      <td>154.61</td>\n",
+       "      <td>182.54</td>\n",
+       "      <td>77.06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-06-06</th>\n",
+       "      <td>69.16</td>\n",
+       "      <td>30.38</td>\n",
+       "      <td>154.90</td>\n",
+       "      <td>185.22</td>\n",
+       "      <td>77.07</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-06-07</th>\n",
+       "      <td>69.52</td>\n",
+       "      <td>30.92</td>\n",
+       "      <td>155.35</td>\n",
+       "      <td>190.15</td>\n",
+       "      <td>77.43</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-06-10</th>\n",
+       "      <td>70.29</td>\n",
+       "      <td>30.76</td>\n",
+       "      <td>153.52</td>\n",
+       "      <td>192.58</td>\n",
+       "      <td>76.95</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Symbols         A    AAL     AAP    AAPL   ABBV\n",
+       "date                                           \n",
+       "2019-06-04  67.95  29.12  154.61  179.64  76.75\n",
+       "2019-06-05  68.35  30.36  154.61  182.54  77.06\n",
+       "2019-06-06  69.16  30.38  154.90  185.22  77.07\n",
+       "2019-06-07  69.52  30.92  155.35  190.15  77.43\n",
+       "2019-06-10  70.29  30.76  153.52  192.58  76.95"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "close['sp500'].tail().iloc[:5, :5]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -898,7 +1104,7 @@
        "[8 rows x 505 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -908,8 +1114,111 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For WordPress"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>Symbols</th>\n",
+       "      <th>A</th>\n",
+       "      <th>AAL</th>\n",
+       "      <th>AAP</th>\n",
+       "      <th>AAPL</th>\n",
+       "      <th>ABBV</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>1258.000000</td>\n",
+       "      <td>1258.000000</td>\n",
+       "      <td>1258.000000</td>\n",
+       "      <td>1258.000000</td>\n",
+       "      <td>1258.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>52.010924</td>\n",
+       "      <td>41.207727</td>\n",
+       "      <td>145.418612</td>\n",
+       "      <td>135.094399</td>\n",
+       "      <td>66.653293</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>13.866577</td>\n",
+       "      <td>6.366236</td>\n",
+       "      <td>24.128339</td>\n",
+       "      <td>38.127616</td>\n",
+       "      <td>17.721243</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>32.258600</td>\n",
+       "      <td>24.539800</td>\n",
+       "      <td>79.168700</td>\n",
+       "      <td>82.743800</td>\n",
+       "      <td>42.066600</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>39.393500</td>\n",
+       "      <td>36.586125</td>\n",
+       "      <td>132.519725</td>\n",
+       "      <td>103.622650</td>\n",
+       "      <td>53.170800</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Symbols            A          AAL          AAP         AAPL         ABBV\n",
+       "count    1258.000000  1258.000000  1258.000000  1258.000000  1258.000000\n",
+       "mean       52.010924    41.207727   145.418612   135.094399    66.653293\n",
+       "std        13.866577     6.366236    24.128339    38.127616    17.721243\n",
+       "min        32.258600    24.539800    79.168700    82.743800    42.066600\n",
+       "25%        39.393500    36.586125   132.519725   103.622650    53.170800"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "close['sp500'].describe().iloc[:5, :5]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -918,7 +1227,7 @@
        "(1258, 505)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -971,7 +1280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -987,7 +1296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1003,7 +1312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {
     "scrolled": true
    },
@@ -1083,12 +1392,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Display the strategy returns"
+    "## Backtesting Results\n",
+    "In this section, we present the backtesting results of the trading strategy."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1133,7 +1443,7 @@
        "returns  0.048986  0.063328  0.067413"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1159,8 +1469,8 @@
    "metadata": {},
    "source": [
     "## Conclusion\n",
-    "In this article, we reviewed the well-known January effect, it's causes and a trading strategy to profit from it.\n",
-    "The trading strategy buys (sells) the losing (winning) stocks in December, and assumes reversal in January.\n",
+    "In this article, we reviewed the well-known January effect, and proposed a trading strategy to profit from it.\n",
+    "The trading strategy buys (sells) the losing (winning) stocks in December, and awaits reversal in January.\n",
     "The trading strategy generates the most (least) returns when using small (large) capitalization stocks."
    ]
   }
